# OpenGL

./: CMakeLists.txt
Resources/Shader/: Fragment.frag
include/OpenGL/Component/: Component.h
include/OpenGL/GLFunction/: GLFunction.h
include/OpenGL/Helper/: Helper.h
include/OpenGL/Math/: Math.h
include/OpenGL/Object/: Object.h
include/OpenGL/Template/: Template.h
include/OpenGL/Window/: Window.h
src/: Main.cpp
src/OpenGL/Component/: Component.cpp
src/OpenGL/GLFunction/: GLFunction.cpp
src/OpenGL/Helper/: Helper.cpp
src/OpenGL/Math/: Math.cpp
src/OpenGL/Object/: Object.cpp
src/OpenGL/Window/: Window.cpp
